# MWC-miner

./: CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  MWC-miner.toml  README.md  azure-pipelines.yml  install.sh  install_ocl_plugins.sh
.ci/: release.yml
.github/workflows/: msvc.yml  rust-clippy.yml
config/: Cargo.toml
config/src/: config.rs  lib.rs  types.rs
cuckoo-miner/: Cargo.toml
cuckoo-miner/src/: build.rs  lib.rs
cuckoo-miner/src/config/: mod.rs  types.rs
cuckoo-miner/src/cuckoo_sys/: ffi.rs  mod.rs
cuckoo-miner/src/cuckoo_sys/plugins/: CMakeLists.txt
cuckoo-miner/src/cuckoo_sys/plugins/cmake/: find_cuda.cmake
cuckoo-miner/src/error/: mod.rs
cuckoo-miner/src/miner/: consensus.rs  miner.rs  mod.rs  types.rs  util.rs
etc/: crate-release.sh
ocl_cuckaroo/: Cargo.toml
ocl_cuckaroo/src/: lib.rs  trimmer.rs
ocl_cuckatoo/: Cargo.toml
ocl_cuckatoo/src/: lib.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
util/: Cargo.toml
util/src/: hex.rs  lib.rs  logger.rs  types.rs
