[package]
name = "MWC_miner_plugin"
version = "4.0.0"
authors = ["MWC Developers <mimblewimble@lists.launchpad.net>"]
repository = "https://github.com/mimblewimble/MWC-miner"
description = "Device specific plugins for the MWC miner"
license = "Apache-2.0"
workspace = ".."

[dependencies]
byteorder = "1"
blake2-rfc = "0.2"
libc = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
